...
    </dependencies>
    <scenes>
        <!--My Favorites-->
        <scene sceneID="nf1-6Y-2Ip">
            <objects>
                <navigationController id="m7V-bW-YWA" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="My Favorites" image="starSmall" id="KzR-zg-bS8"/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="4jX-Ad-uKg">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
...
            </objects>
            <point key="canvasLocation" x="-658" y="220"/>
        </scene>
        <!--MY FAVORITES-->
        <scene sceneID="SG0-Lg-gUD">
            <objects>
                <viewController title="MY FAVORITES" id="xwX-iP-dns" customClass="FavoritesViewController" customModule="WeedmapsChallenge" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="QQt-Ws-tkN">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6fs-Fq-s17">
                                <rect key="frame" x="0.0" y="44" width="375" height="574"/>
...
