...
  func setUpViewModel() {
    viewModel = HomeViewModel(service: BusinessService())
    viewModel?.delegate = self
  }

  func setUpSearchBar() {
    navigationController?.navigationBar.topItem?.title = "SEARCH AND ENJOY"
    navigationItem.backBarButtonItem = UIBarButtonItem(title: "", style: .plain, target: nil, action: nil)
    searchController = UISearchController(searchResultsController: nil)
    searchController.searchResultsUpdater = self
    searchController.obscuresBackgroundDuringPresentation = false
    searchController.searchBar.placeholder = K.searchPlaceholder
    navigationItem.searchController = searchController
...
